# DART

./: README.md  demo_multiclass.py  demo_video.py  pyproject.toml  setup.py
sam3/: coco_classes.py  efficient_backbone.py  model_builder.py  video_pipeline.py
sam3/backbones/: __init__.py  mobile_clip.py  repvit.py  tiny_vit.py
sam3/backbones/efficientvit/efficientvit/: __init__.py
sam3/distillation/: __init__.py  distill_trainer.py  export_onnx.py  lora.py  sam3_student.py  student_backbone.py
sam3/model/: multiclass_head.py  necks.py  position_encoding.py  sam3_multiclass_fast.py  vitdet.py  vl_combiner.py
sam3/tracking/: __init__.py  byte_tracker.py
sam3/trt/: FP16_DEBUG_REPORT.md  __init__.py  build_engine.py  calibrator.py  calibrator_enc_dec.py  export_backbone.py  export_enc_dec.py  rope_onnx.py  trt_backbone.py
scripts/: analyze_onnx_block.py  analyze_pruning.py  auto_label.py  benchmark_all_students.py  benchmark_backbone.py  benchmark_class_scaling.py  benchmark_compile_fp16.py  benchmark_efficient_quality.py  benchmark_enc_dec.py  benchmark_fp16_fixed.py  benchmark_fp16_precision.py  benchmark_onnxrt.py  benchmark_pruning_quality.py  benchmark_quality.py  benchmark_torch_trt.py  benchmark_video.py  bisect_blocks_fp32.py  block_pruner_search.py  build_coco_engine.py  calibrate_single_pass.py  compare_backbone.py  compare_eager_fp16.py  compare_onnx_graphs.py  diagnose_fp16.py  diagnose_pipeline.py  distill.py  dump_matmul_names.py  eval_all_students.py  eval_coco.py  eval_coco_official.py  eval_cocoseg.py  export_efficient_backbone.py  export_hf_backbone.py  export_student_trt.py  find_fp32_layers.py  finetune_pruned.py  generate_qualitative.py  optimize_compile.py  optimize_pytorch_fp16.py  optimize_pytorch_fp16_v2.py  (+37 more)
